@@ -5,6 +5,7 @@
 
   Copyright (c) 2012-19 The Processing Foundation
   Copyright (c) 2011-12 Ben Fry and Casey Reas
+  GStreamer implementation ported from GSVideo library by Andres Colubri
 
   This library is free software; you can redistribute it and/or
   modify it under the terms of the GNU Lesser General Public
@@ -30,6 +31,7 @@ import processing.core.PConstants;
 
 import java.io.File;
 import java.nio.ByteOrder;
+import java.nio.file.Paths;
 import java.util.List;
 
 /**
@@ -37,18 +39,18 @@ import java.util.List;
  * this library.
  */
 public class Video implements PConstants {
+  // Allows to set the amount of desired debug output from GStreamer, according to the following table:
+  // https://gstreamer.freedesktop.org/documentation/tutorials/basic/debugging-tools.html?gi-language=c#printing-debug-information
+  public static int DEBUG_LEVEL = 1;
+
   // Path that the video library will use to load the GStreamer base libraries 
   // and plugins from. They can be passed from the application using the 
   // gstreamer.library.path and gstreamer.plugin.path system variables (see
   // comments in initImpl() below).
-  protected static String gstreamerLibPath = "";
-  protected static String gstreamerPluginPath = "";
- 
-  // Direct buffer pass enabled by default. With this mode enabled, no new 
-  // buffers are created and disposed by the GC in each frame (thanks to Octavi 
-  // Estape for suggesting this improvement) which should help performance in 
-  // most situations.
-  protected static boolean passDirectBuffer = true; 
+  public static String gstreamerLibPath = "";
+  public static String gstreamerPluginPath = "";  
+  
+  protected static boolean usingGStreamerSystemInstall = false;
 
   // OpenGL texture used as buffer sink by default, when the renderer is 
   // GL-based. This can improve performance significantly, since the video 
@@ -58,8 +60,6 @@ public class Video implements PConstants {
   protected static boolean useGLBufferSink = true;    
 
   protected static boolean defaultGLibContext = false;
-  
-  protected static boolean useGstreamerSystemInstall = false;
   
   protected static long INSTANCES_COUNT = 0;
   
@@ -85,10 +85,17 @@ public class Video implements PConstants {
    
   
   static protected void initImpl() {
-    // The location of the GStreamer base libraries can be passed from the 
-    // application to the vide library via a system variable. In Eclipse, add to 
-    // "VM Arguments" in  "Run Configurations" the following line:
-    // -Dgstreamer.library.path=path    
+    // The video library loads the GStreamer libraries according to the following
+    // priority:
+    // 1) If the VM argument "gstreamer.library.path" exists, it will use it as the
+    //    root location of the libraries. This is typically the case when running 
+    //    the library from Eclipse.
+    // 2) If the environmental variable is GSTREAMER_1_0_ROOT_X86(_64) is defined then 
+    //    will try to use its contents as the root path of the system install of GStreamer.
+    // 3) If GSTREAMER_1_0_ROOT_X86(_64) is not defined, then will try to use default 
+    //    install locations of GStreamer on Windows and Mac, if they exist.
+    // 4) If none of the above works, the bundled version of GStreamer will be used.
+    // In this way, priority is given to the system installation of GStreamer. 
     String libPath = System.getProperty("gstreamer.library.path");
     if (libPath != null) {
       gstreamerLibPath = libPath;
@@ -102,7 +109,76 @@ public class Video implements PConstants {
       if (pluginPath != null) {
         gstreamerPluginPath = pluginPath;
       }
+      
+      usingGStreamerSystemInstall = false;
     } else {
+      String rootPath = "";
+      if (bitsJVM == 64 && System.getenv("GSTREAMER_1_0_ROOT_X86_64") != null) {
+        // Get 64-bit root of GStreamer install
+        rootPath = System.getenv("GSTREAMER_1_0_ROOT_X86_64");
+      } else if (bitsJVM == 32 && System.getenv("GSTREAMER_1_0_ROOT_X86") != null) {
+        // Get 32-bit root of GStreamer install
+        rootPath = System.getenv("GSTREAMER_1_0_ROOT_X86");  
+      }
+      
+      if (!rootPath.equals("")) {
+        if (PApplet.platform == MACOSX) {
+          gstreamerLibPath = Paths.get(rootPath, "lib").toString();
+        } else {
+          gstreamerLibPath = Paths.get(rootPath, "bin").toString();
+        }
+        File path = new File(gstreamerLibPath);
+        if (path.exists()) {
+          // We have a system install of GStreamer
+          usingGStreamerSystemInstall = true;
+        } else {
+          // The environmental variables contain invalid paths...
+          gstreamerLibPath = "";
+        }
+      } else {
+        // No environmental variables defined, will try some default locations
+        if (PApplet.platform == MACOSX) {
+          rootPath = "/Library/Frameworks/GStreamer.framework/Versions/1.0";
+          gstreamerLibPath = Paths.get(rootPath, "lib").toString(); 
+        } else if (PApplet.platform == WINDOWS) {
+          // We are on Windows.
+          if (bitsJVM == 64) {
+            rootPath = "C:\\gstreamer\\1.0\\x86_64";
+          } else {
+            rootPath = "C:\\gstreamer\\1.0\\x86";
+          }
+          gstreamerLibPath = Paths.get(rootPath, "bin").toString();
+        }
+        
+        File path = new File(gstreamerLibPath);
+        if (path.exists()) {
+          // We have a system install of GStreamer
+          usingGStreamerSystemInstall = true;
+          if (bitsJVM == 64) {
+            Environment.libc.setenv("GSTREAMER_1_0_ROOT_X86_64", gstreamerLibPath, 1);  
+          } else {
+            Environment.libc.setenv("GSTREAMER_1_0_ROOT_X86", gstreamerLibPath, 1); 
+          }          
+        }        
+      }
+      
+      if (usingGStreamerSystemInstall) {
+        if (System.getenv("GST_PLUGIN_SYSTEM_PATH") != null) {
+          gstreamerPluginPath = System.getenv("GST_PLUGIN_SYSTEM_PATH");
+        } else {
+          if (PApplet.platform == WINDOWS) {
+            gstreamerPluginPath = Paths.get(rootPath, "lib", "gstreamer-1.0").toString();
+          } else {
+            gstreamerPluginPath = Paths.get(gstreamerLibPath, "gstreamer-1.0").toString();          }
+        }
+        File path = new File(gstreamerPluginPath);
+        if (!path.exists()) {
+          gstreamerPluginPath = "";
+        }        
+      }
+    } 
+      
+    if (libPath == null && !usingGStreamerSystemInstall) {
       // Paths are build automatically from the current location of the video
       // library.
       if (PApplet.platform == LINUX) {    
@@ -112,90 +188,65 @@ public class Video implements PConstants {
       } else if (PApplet.platform == MACOSX) {
         buildMacOSXPaths();
       }      
-    }    
-
+    }
+    
     if (!gstreamerLibPath.equals("")) {
       System.setProperty("jna.library.path", gstreamerLibPath);
     }
-    // outputs the paths JNA is trying
-    //System.setProperty("jna.debug_load", "true");
+    
+    Environment.libc.setenv("GST_DEBUG", String.valueOf(DEBUG_LEVEL), 1);    
 
-    if (PApplet.platform == WINDOWS) {
-      LibraryLoader loader = LibraryLoader.getInstance();
-      if (loader == null) {
-        System.err.println("Cannot load local version of GStreamer libraries.");
+    if (!usingGStreamerSystemInstall) {
+      // Disable the use of gst-plugin-scanner on environments where we're
+      // not using the host system's installation of GStreamer
+      // the problem with gst-plugin-scanner is that the library expects it
+      // to exist at a specific location determined at build time
+      if (PApplet.platform != LINUX) {
+        Environment.libc.setenv("GST_REGISTRY_FORK", "no", 1);
+      }
+
+      // Prevent globally installed libraries from being used on platforms
+      // where we ship GStreamer
+      if (!gstreamerPluginPath.equals("")) {
+        Environment.libc.setenv("GST_PLUGIN_SYSTEM_PATH_1_0", "", 1);
       }
     }
 
-    // disable the use of gst-plugin-scanner on environments where we're
-    // not using the host system's installation of GStreamer
-    // the problem with gst-plugin-scanner is that the library expects it
-    // to exist at a specific location determined at build time
-    if (PApplet.platform != LINUX) {
-      Environment.libc.setenv("GST_REGISTRY_FORK", "no", 1);
-    }
-
-    // prevent globally installed libraries from being used on platforms
-    // where we ship GStreamer
-    if (PApplet.platform == WINDOWS || PApplet.platform == MACOSX) {
-      Environment.libc.setenv("GST_PLUGIN_SYSTEM_PATH_1_0", "", 1);
-    }
+    if (PApplet.platform == WINDOWS) {
+      // Pre-loading base GStreamer libraries on Windows, otherwise nothing works
+      LibraryLoader loader = LibraryLoader.getInstance();
+      if (loader == null) {
+        System.err.println("Cannot load GStreamer libraries.");
+      }
+    }    
 
     String[] args = { "" };
     Gst.setUseDefaultContext(defaultGLibContext);
     Gst.init("Processing core video", args);
    
-    // instead of setting the plugin path via scanPath(), we could alternatively
-    // also set the GST_PLUGIN_PATH_1_0 environment variable
-	addPlugins();
-	
-	
-	// output GStreamer version, lib path, plugin path
-	// and whether a system install is being used
-	printGStreamerInfo();
+    if (!usingGStreamerSystemInstall) {
+      // Plugins are scanned explicitly from the bindings if using the
+      // local GStreamer
+      addPlugins();
+    }
+  
+    // output GStreamer version, lib path, plugin path
+    // and whether a system install is being used
+    printGStreamerInfo();
   }
 
   static protected void printGStreamerInfo() {
-	  
-	  String output = "";
-	  System.out.println("Gstreamer Version: " + Gst.getVersionString());
-	  
-	  if(useGstreamerSystemInstall) {
-	    	output = "Using System Install Gstreamer: ";
-	        
-	    	// get x64-bit root of GStreamer install
-	    	if(System.getenv("GSTREAMER_1_0_ROOT_X86_64") != null && bitsJVM == 64) {
-	    		output += System.getenv("GSTREAMER_1_0_ROOT_X86_64");
-	    	}
-	  
-	    	// get x32-bit root of GStreamer install
-	    	else if(System.getenv("GSTREAMER_1_0_ROOT_X86") != null && bitsJVM == 32) {
-	    		output += System.getenv("GSTREAMER_1_0_ROOT_X86");
-	    	}
-	    	
-	    	else {
-	    		output += "Unknown location, please set GSTREAMER_1_0_ROOT_X86(_64) to where GStreamer is installed";
-	    	}
-	    	
-	    	System.out.println(output);
-	  }
-	  
-	  // simply output gstreamerLibPath and gstreamerPluginPath when using bundled GStreamer
-	  else {
-		    System.out.println("Gstreamer Library Path: " + gstreamerLibPath);
-		    System.out.println("Gstreamer Plugin Path: " + gstreamerPluginPath);
-	  }
-	    
-}
+    System.out.println("Processing video library using GStreamer " + Gst.getVersion());
+  }
+
   
   static protected void addPlugins() {
-    if (!gstreamerPluginPath.equals("") && !useGstreamerSystemInstall) {
+    if (!gstreamerPluginPath.equals("")) {
       Registry reg = Registry.get();
       boolean res;
       res = reg.scanPath(gstreamerPluginPath);
       if (!res) {
-        System.err.println("Cannot load GStreamer plugins from " +
-                           gstreamerPluginPath);
+        System.err.println("Cannot load GStreamer plugins from " + gstreamerPluginPath);
       }
     }
   }
@@ -222,7 +273,9 @@ public class Video implements PConstants {
     LibraryPath libPath = new LibraryPath();
     String path = libPath.get();
     gstreamerLibPath = buildGStreamerLibPath(path, "windows" + bitsJVM);
-    gstreamerPluginPath = gstreamerLibPath + "\\gstreamer-1.0";
+    if (!gstreamerLibPath.equals("")) {
+      gstreamerPluginPath = Paths.get(gstreamerLibPath, "gstreamer-1.0").toString();
+    }
   }
 
   
@@ -230,7 +283,9 @@ public class Video implements PConstants {
     LibraryPath libPath = new LibraryPath();
     String path = libPath.get();
     gstreamerLibPath = buildGStreamerLibPath(path, "macosx");
-    gstreamerPluginPath = gstreamerLibPath + "/gstreamer-1.0";
+    if (!gstreamerLibPath.equals("")) {
+      gstreamerPluginPath = Paths.get(gstreamerLibPath, "gstreamer-1.0").toString();
+    }    
   }
 
   
@@ -239,22 +294,19 @@ public class Video implements PConstants {
     if (path.exists()) {
       return base + os; 
     } else {     	
-    	useGstreamerSystemInstall = true;  
-    	return base;  
+    	usingGStreamerSystemInstall = true;  
+    	return "";  
     }
   }
 
   
   static protected float nanoSecToSecFrac(long nanosec) {
-//    for (int i = 0; i < 3; i++)
-//      nanosec /= 1E3;
-//    return nanosec;
     return (float)(nanosec / 1E9);
   }
 
   
   static protected long secToNanoLong(float sec) {
-    Float f = new Float(sec * 1E9);
+    Double f = Double.valueOf(sec * 1E9);
     return f.longValue();
   }
   
